[package]
name = "rostr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdal = "0.16.0"
gdal-sys = { version = '0.9.1', features = ['bindgen'] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.113"
