[package]
name = "rostr"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rostr"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
config = "0.14.0"
gdal = "0.16.0"
gdal-sys = { version = '0.9.1', features = ['bindgen'] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.113"
thiserror = "1.0.58"
